# media-toolkit

./: .gitignore  AGENTS.md  README.md  setup.cfg
docs/: agent-workflows.md
media_toolkit/: __init__.py  cli.py  command_registry.py  final_hif_archive.py  finalize_workflow.py  group_organize.py  hif_prune.py  legacy_processing.py  manifest_organize.py  path_input.py  photos_import.py  preflight.py  rawpy_tools.py  self_check.py  skill_installer.py  style_learning.py  style_profiles.json  style_profiles.py  subject_lift.py  workflow_doctor.py  workflows.json  workflows.py
presets/: lightroom-sony-st-travel-base.md
prompts/: lightroom-raw-cull-and-rough-edit.md
scripts/: batch_report.py  commands.py  compress_drone_video.py  compress_images_under_size.py  doctor.py  extract_featured_raw.py  fill_missing_photo_locations.py  finalize.py  generate_contact_sheets.py  hif_prune.py  install-codex-skills.sh  learn_style.py  lr_apply.py  lr_plan.py  manifest_template.py  organize.py  panorama_organize.py  png_to_jpg.py  portrait_organize.py  preflight_run.py  ratings_apply.py  raw_analyze.py  rawpy_render.py  self_check.py  status.py  styles.py  subject_apply.py  subject_plan.py  verify_cull.py  workflows.py
skills/: manifest.json
src/: __init__.py  core.py  image_processing.py  video_processing.py
tests/: test_batch_report.py  test_command_registry.py  test_extract_featured_raw.py  test_fill_missing_photo_locations.py  test_finalize.py  test_generate_contact_sheets.py  test_hif_prune.py  test_install_codex_skills.py  test_legacy_processing.py  test_lr_apply.py  (+21 more)
(+50 files in other folders)
