[metadata]
name = media-toolkit
version = 0.1.0
description = Personal media workflow command-line toolkit.

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    Pillow
    rawpy

[options.package_data]
media_toolkit =
    workflows.json

[options.entry_points]
console_scripts =
    mt = media_toolkit.cli:main
